--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Навигационное меню -->
     <div class="menu">
-      <a href="receipes2.html">Рецепты</a>
+      <a href="receipes2.php">Рецепты</a>
       <a href="your_receipe.html">Ваш рецепт</a>
       <a href="contact.html">Обратная связь</a> 
     </div>
