--- a/contact.html
+++ b/contact.html
@@ -1,119 +1,86 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();
-   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(101191783, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/101191783" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-
-  <!-- Мета-информация -->
-  <meta charset="UTF-8"> <!-- Кодировка документа (UTF-8 для поддержки кириллицы) -->
-  <title>Обратная связь</title> <!-- Заголовок страницы в браузере -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Настройки адаптивности для мобильных устройств -->
-  
-  <!-- Подключение стилей -->
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> <!-- Красивый шрифт для заголовков -->
-  <link rel="stylesheet" href="styles_contact.css"> <!-- Основной файл стилей -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> <!-- Bootstrap CSS -->
+  <meta charset="UTF-8">
+  <title>Обратная связь</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles_contact.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
-  <!-- Шапка сайта -->
+
   <header>
-    <!-- Блок с логотипом и заголовком -->
     <div class="logo-title">
-      <img src="logo.png" alt="Логотип" class="logo"> <!-- Логотип сайта -->
-      <h1>Обратная связь</h1> <!-- Главный заголовок страницы -->
+      <img src="logo.png" alt="Логотип" class="logo">
+      <h1>Обратная связь</h1>
     </div>
 
-    <!-- Элементы мобильного меню -->
-    <input type="checkbox" id="menu-toggle"> <!-- Чекбокс для управления мобильным меню -->
-    <label for="menu-toggle" class="menu-icon"> <!-- Гамбургер-иконка (3 полоски) -->
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="menu-icon">
       <span></span>
       <span></span>
       <span></span>
     </label>
 
-    <!-- Основная навигация -->
     <nav class="menu">
-      <a href="index.html">Главная</a> <!-- Ссылка на главную страницу -->
-      <a href="receipes2.html">Рецепты</a> <!-- Ссылка на страницу с рецептами -->
-      <a href="your_receipe.html">Ваш рецепт</a> <!-- Ссылка на форму добавления рецепта -->
+      <a href="index.html">Главная</a>
+      <a href="receipes2.php">Рецепты</a>
+      <a href="your_receipe.php">Ваш рецепт</a>
     </nav>
   </header>
 
-  <!-- Основное содержимое страницы -->
-  <main>
-    <div class="container contact-container">
-      <!-- Форма обратной связи -->
-      <form id="contactForm" class="contact-form">
-        <h2>Свяжитесь с нами</h2> <!-- Заголовок формы -->
+<main>
+  <div class="container contact-container">
+    <form id="contactForm" class="contact-form" method="POST" action="script.php">
+      <input type="hidden" name="form_type" value="feedback" />
+      <h2>Свяжитесь с нами</h2>
 
-        <!-- Поле для имени -->
-        <input type="text" id="name" placeholder="Ваше имя" required>
-        <div class="error-message">Пожалуйста, введите ваше имя</div> <!-- Сообщение об ошибке -->
+      <input type="text" id="name" name="name" placeholder="Ваше имя" required>
+      <div class="error-message">Пожалуйста, введите ваше имя</div>
 
-        <!-- Поле для email -->
-        <input type="email" id="email" placeholder="Электронная почта" required>
-        <div class="error-message">Пожалуйста, введите корректный email</div>
+      <input type="email" id="email" name="email" placeholder="Электронная почта" required>
+      <div class="error-message">Пожалуйста, введите корректный email</div>
 
-        <!-- Поле для телефона -->
-        <input type="tel" id="phone" placeholder="Мобильный телефон" required>
-        <div class="error-message">Пожалуйста, введите корректный номер телефона</div>
+      <input type="tel" id="phone" name="phone" placeholder="Мобильный телефон" required>
+      <div class="error-message">Пожалуйста, введите корректный номер телефона</div>
 
-        <!-- Поле для сообщения -->
-        <textarea id="message" placeholder="Ваш комментарий" rows="5" required></textarea>
-        <div class="error-message">Пожалуйста, введите ваше сообщение</div>
+      <textarea id="message" name="message" placeholder="Ваш комментарий" rows="5" required></textarea>
+      <div class="error-message">Пожалуйста, введите ваше сообщение</div>
 
-        <!-- Кнопка отправки формы -->
-        <button type="submit">Отправить</button>
-      </form>
-    </div>
-  </main>
+      <button type="submit">Отправить</button>
+    </form>
+  </div>
+</main>
 
-  <!-- Подвал сайта -->
   <footer class="footer">
-    <!-- Левая часть с контактами -->
+    <!-- Левая часть подвала с контактами -->
     <div class="left">
       <p>Контакты<br>
       тел.: 89539870092<br>
       email: lizashe2005@mail.ru</p>
     </div>
-    
-    <!-- Правая часть с копирайтом -->
+    <!-- Правая часть подвала с копирайтом -->
     <div class="right">
       <p>© 2025 Кулинарная книга.<br>Все права защищены.</p>
     </div>
   </footer>
-  
-  <!-- Модальное окно (всплывающее) для отображения сообщений -->
+
   <div class="modal fade" id="formModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-body text-center">
-          <p id="modal-text" class="my-4"></p> <!-- Текст сообщения -->
+          <p id="modal-text" class="my-4"></p>
         </div>
         <div class="modal-footer justify-content-center">
-          <button type="button" class="btn btn-success" data-bs-dismiss="modal">OK</button> <!-- Кнопка закрытия -->
+          <button type="button" class="btn btn-success" data-bs-dismiss="modal">OK</button>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Подключение скриптов -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> <!-- Bootstrap JS + Popper -->
-  <script src="script.js"></script> <!-- Пользовательские скрипты -->
-</body>
+  <!-- Подключение Bootstrap JS + Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
+  </body>
 </html>
